--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<meta property="og:title" content="Real-Time Taxi Availability Singapore" />
 		<meta property="og:description" content="View real-time taxi availability in Singapore on an interactive map." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://yourdomain.com/taxi-map" />
-		<meta property="og:image" content="https://yourdomain.com/images/taxi-map-preview.png" />
+		<meta property="og:url" content="https://yapweijun1996.github.io/Taxi-Singapore-Map-v1/" />
+		<meta property="og:image" content="https://yapweijun1996.github.io/Taxi-Singapore-Map-v1/og_img.jpg" />
 		
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Real-Time Taxi Availability Singapore" />
 		<meta name="twitter:description" content="View real-time taxi availability in Singapore on an interactive map." />
-		<meta name="twitter:image" content="https://yourdomain.com/images/taxi-map-preview.png" />
+		<meta name="twitter:image" content="https://yapweijun1996.github.io/Taxi-Singapore-Map-v1/og_img.jpg" />
 		
 		<!-- Leaflet CSS -->
 		<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
